--- a/template_for_lamm_c_sharp/Src/NamedVM/AppVM/AppView.xaml
+++ b/template_for_lamm_c_sharp/Src/NamedVM/AppVM/AppView.xaml
@@ -1,8 +1,8 @@
-﻿<Application x:Class="template_for_lamm_c_sharp.App"
+﻿<Application x:Class="template_for_lamm_c_sharp.AppView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:template_for_lamm_c_sharp"
-             StartupUri="MainWindow.xaml">
+             StartupUri="MainWindowView.xaml">
     <Application.Resources>
          
     </Application.Resources>
