--- a/template_for_lamm_c_sharp/Src/ConsoleWindowView.xaml
+++ b/template_for_lamm_c_sharp/Src/ConsoleWindowView.xaml
@@ -1,11 +1,16 @@
-﻿<Window x:Class="template_for_lamm_c_sharp.MainWindowView"
+<Window x:Class="template_for_lamm_c_sharp.ConsoleWindowView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:template_for_lamm_c_sharp"
-        Title="ExampleBlyad" Height="450" Width="800">
-    <Grid>
-        <TextBlock Text="Привет, мир!" FontSize="16" Foreground="Black" />
-    </Grid>
+        Title="LOG" Height="450" Width="800">
+    <ScrollViewer>
+        <TextBlock 
+            x:Name="textBlockLog" 
+            Text="" 
+            FontSize="16" 
+            Background="Black"
+            TextWrapping="Wrap"/>
+    </ScrollViewer>
 </Window>
