--- a/template_for_lamm_c_sharp/Src/NamedVM/MainWindowVM/MainWindowView.xaml
+++ b/template_for_lamm_c_sharp/Src/NamedVM/MainWindowVM/MainWindowView.xaml
@@ -1,11 +1,12 @@
 ﻿<Window x:Class="template_for_lamm_c_sharp.MainWindowView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:template_for_lamm_c_sharp"
-        Title="ExampleBlyad" Height="450" Width="800">
+        Title="ExampleBlyad" Height="600" Width="800">
     <Grid>
-        <TextBlock Text="Привет, мир!" FontSize="16" Foreground="Black" />
+        <TextBlock 
+            x:Name="textBlockHelloWorld" 
+            Text="Привет, мир!" 
+            FontSize="16" 
+            Foreground="Black" />
     </Grid>
 </Window>
